appId: tj.komyob.betting
---
- tapOn: |-
    Иконка бонус-клуба
    Бонус-клуб
- assertVisible: Иконка информации о бонус-клубе
- assertVisible: Бонус-клуб
- tapOn: Иконка информации о бонус-клубе
- assertVisible: |-
    Как работает наш бонус-клуб?*
    Каждый месяц Вы можете получать бонусы в виде фрибетов совершая ставки и получая за это короны.
- tapOn: Понятно
- runFlow:
    when:
      visible: Безлогина
    commands:
      - assertVisible: Регистрация
      - assertVisible: Войти
# Написать тесты на проверку нового пользака
- tapOn: Назад