appId: tj.komyob.betting
---
- tapOn: |-
    Иконка техподдержки
    Поддержка
- assertVisible: Обращение в поддержку
- tapOn: |-
    Чат с поддержкой
    Написать в чат
- assertVisible: "   Мы тут и готовы помочь"
- tapOn: Введите сообщение…
- inputText: "test auto"
- tapOn:
    id: send_message_image_button
- assertVisible: Test auto
- tapOn:
    id: close_image_button