appId: tj.komyob.betting
---
- scroll
- assertVisible: |-
    Иконка уведомлений
    Центр уведомлений
- tapOn: |-
    Иконка уведомлений
    Центр уведомлений
- assertVisible: Уведомления
- tapOn: Назад
- tapOn: Иконка уведомления
- tapOn: Назад
# Придумать еще тесты
