appId: tj.komyob.betting
---
- runFlow:
    when:
      visible: Иконка реферальной программы
        Реферальная программа
    commands:
      - tapOn: |-
          Иконка реферальной программы
          Реферальная программа
      - assertVisible: Индивидуальный код-приглашение
- tapOn: Иконка информации о реферальной программе
- assertVisible: Как работает наша реферальная программа?
- tapOn: Понятно
- tapOn: Назад
# Дописать тест для нового пользователя через runFlow

